--- a/.github/workflows/lint-compose.yml
+++ b/.github/workflows/lint-compose.yml
@@ -3,6 +3,7 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
+      - run: find svc -mindepth 1 -maxdepth 1 | while read f ; do touch "$f/.env" ; done
       - run: find . -name 'docker-compose.yml' | while read f ; do docker compose -f "$f" config -q ; done
 
 name: lint-compose
