chore: fix caddy dockerfile

--- a/svc/caddy/Dockerfile
+++ b/svc/caddy/Dockerfile
@@ -7,4 +7,4 @@ FROM docker.io/library/caddy:2.8.4-alpine@sha256:33937b9d51461ea87794350c1c09ce5
 COPY --from=builder /usr/bin/caddy /usr/bin/caddy
 
 USER 0
-HEALTHCHECK none
+HEALTHCHECK NONE
