chore: fix some lints

--- a/svc/caddy/docker-compose.yml
+++ b/svc/caddy/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - 443:443/udp
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges=true
     tmpfs:
       - /config?uid:41380,gid=41380
     user: 41380:41380
