--- a/svc/adguard/docker-compose.yml
+++ b/svc/adguard/docker-compose.yml
@@ -2,6 +2,10 @@ name: adguard
 
 services:
   adguard:
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE
     image: docker.io/adguard/adguardhome:v0.107.53@sha256:d9c512051141e6a617d773f16cdf6782c178464c6e766acf9fe63482a171f95c
     ports:
       - 3000:3000
@@ -9,6 +13,9 @@ services:
       - 53:53/udp
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges=true
+    user: 58442:58442
     volumes:
       - config:/opt/adguardhome/conf
       - data:/opt/adguardhome/work
