--- a/svc/filebrowser/docker-compose.yml
+++ b/svc/filebrowser/docker-compose.yml
@@ -2,14 +2,19 @@ name: filebrowser
 
 services:
   filebrowser:
+    cap_drop:
+      - ALL
     command:
-      - -d
-      - /database/db
+      - --database=/database/db
+      - --port=3002
     image: docker.io/filebrowser/filebrowser:v2.31.2@sha256:a4da9ca8364b0a1fc5dd36f7add92582bf673c0ae0bda8dd9bd13062c41d1715
     ports:
-      - 3002:80
+      - 3002:3002
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges=true
+    user: 50788:50788
     volumes:
       - data:/srv
       - database:/database
