--- a/svc/adguard/docker-compose.yml
+++ b/svc/adguard/docker-compose.yml
@@ -1,5 +1,9 @@
 name: adguard
 
+networks:
+  caddy:
+    external: true
+
 services:
   adguard:
     cap_drop:
@@ -7,10 +11,13 @@ services:
     cap_add:
       - NET_BIND_SERVICE
     image: docker.io/adguard/adguardhome:v0.107.53@sha256:d9c512051141e6a617d773f16cdf6782c178464c6e766acf9fe63482a171f95c
+    networks:
+      caddy:
+        aliases:
+          - adguard
     ports:
-      - 3000:3000
-      - 53:53/tcp
-      - 53:53/udp
+      - 100.106.32.89:53:5353/tcp
+      - 100.106.32.89:53:5353/udp
     read_only: true
     restart: always
     security_opt:
