--- a/svc/filebrowser/docker-compose.yml
+++ b/svc/filebrowser/docker-compose.yml
@@ -1,15 +1,21 @@
 name: filebrowser
 
+networks:
+  caddy:
+    external: true
+
 services:
   filebrowser:
     cap_drop:
       - ALL
     command:
       - --database=/database/db
-      - --port=3002
+      - --port=3000
     image: docker.io/filebrowser/filebrowser:v2.31.2@sha256:a4da9ca8364b0a1fc5dd36f7add92582bf673c0ae0bda8dd9bd13062c41d1715
-    ports:
-      - 3002:3002
+    networks:
+      caddy:
+        aliases:
+          - filebrowser
     read_only: true
     restart: always
     security_opt:
