--- a/svc/woodpecker-agent/docker-compose.yml
+++ b/svc/woodpecker-agent/docker-compose.yml
@@ -10,12 +10,14 @@ services:
       - ALL
     env_file: .env
     environment:
-      WOODPECKER_SERVER: x555sj.gentoo-sargas.ts.net:3004
+      WOODPECKER_SERVER: x555sj.gentoo-sargas.ts.net:9000
     group_add:
       - "993"
     image: docker.io/woodpeckerci/woodpecker-agent:v2.7.1-alpine
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges=true
     user: 36307:36307
     volumes:
       - config:/etc/woodpecker
