--- a/svc/cloudflared/docker-compose.yml
+++ b/svc/cloudflared/docker-compose.yml
@@ -18,11 +18,11 @@ services:
     env_file: .env
     environment:
       NO_AUTOUPDATE: true
+    image: docker.io/cloudflare/cloudflared:2024.10.0
     networks:
       - cloudflared
-    image: docker.io/cloudflare/cloudflared:2024.10.0
     read_only: true
     restart: always
     security_opt:
-      - no-new-privileges=true
+      - no-new-privileges:true
     user: 17026:17026
