--- a/svc/immich/docker-compose.yml
+++ b/svc/immich/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - default
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges:true
     tmpfs:
       - /.cache:uid=8723,gid=8723
       - /tmp:uid=8723,gid=8723
@@ -47,6 +49,8 @@ services:
       # Used for connecting the app, since there is already tailscale encryption.
       - 100.106.32.89:3001:3001
     restart: always
+    security_opt:
+      - no-new-privileges:true
     user: 5551:5551
     volumes:
       - data:/usr/src/app/upload
@@ -59,6 +63,8 @@ services:
       - default
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges:true
     tmpfs:
       - /tmp:uid=19166,gid=19166
       - /var/run/postgresql:uid=19166,gid=19166
@@ -73,6 +79,8 @@ services:
       - default
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges:true
     tmpfs:
       - /data:uid=9243,gid=9243
     user: 9243:9243
