--- a/svc/minio/docker-compose.yml
+++ b/svc/minio/docker-compose.yml
@@ -28,6 +28,8 @@ services:
           - minio
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges:true
     user: 29349:29349
     volumes:
       - /mnt/minio:/mnt:Z
