--- a/svc/woodpecker-agent/docker-compose.yml
+++ b/svc/woodpecker-agent/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     read_only: true
     restart: always
     security_opt:
-      - no-new-privileges=true
+      - no-new-privileges:true
     user: 36307:36307
     volumes:
       - config:/etc/woodpecker
