--- a/svc/woodpecker-server/docker-compose.yml
+++ b/svc/woodpecker-server/docker-compose.yml
@@ -26,10 +26,10 @@ services:
           - woodpecker
     ports:
       - 100.106.32.89:9000:9000
-    security_opt:
-      - no-new-privileges=true
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges:true
     user: 4518:4518
     volumes:
       - data:/var/lib/woodpecker
