--- a/svc/adguard/docker-compose.yml
+++ b/svc/adguard/docker-compose.yml
@@ -8,6 +8,8 @@ services:
   adguard:
     cap_drop:
       - ALL
+    healthcheck:
+      disable: true
     image: docker.io/adguard/adguardhome:v0.107.53@sha256:d9c512051141e6a617d773f16cdf6782c178464c6e766acf9fe63482a171f95c
     networks:
       caddy:
