--- a/svc/adguard/docker-compose.yml
+++ b/svc/adguard/docker-compose.yml
@@ -1,3 +1,5 @@
+# kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
+
 name: adguard
 
 networks:
@@ -8,8 +10,8 @@ services:
   adguard:
     cap_drop:
       - ALL
-    healthcheck:
-      disable: true
+    cap_add:
+      - NET_BIND_SERVICE
     image: docker.io/adguard/adguardhome:v0.107.53@sha256:d9c512051141e6a617d773f16cdf6782c178464c6e766acf9fe63482a171f95c
     networks:
       caddy:
