--- a/svc/immich/docker-compose.yml
+++ b/svc/immich/docker-compose.yml
@@ -13,6 +13,8 @@ networks:
 
 services:
   immich-machine-learning:
+    cap_drop:
+      - ALL
     image: ghcr.io/immich-app/immich-machine-learning:v1.117.0@sha256:1221bc54568a0779227baeaa4282bb0e0db50831b66f9ac9afa9d78513df36ad
     networks:
       - default
