--- a/svc/caddy/docker-compose.yml
+++ b/svc/caddy/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     cap_drop:
       - ALL
     cap_add:
+      # kics-scan ignore-line
       - NET_BIND_SERVICE
     configs:
       - source: caddyfile
