--- a/svc/woodpecker-agent/docker-compose.yml
+++ b/svc/woodpecker-agent/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       WOODPECKER_SERVER: x555sj.gentoo-sargas.ts.net:9000
     group_add:
       - "993"
-    image: docker.io/woodpeckerci/woodpecker-agent:v2.7.1-alpine
+    image: docker.io/woodpeckerci/woodpecker-agent:v2.7.1
     read_only: true
     restart: always
     security_opt:
