--- a/svc/caddy/docker-compose.yml
+++ b/svc/caddy/docker-compose.yml
@@ -15,11 +15,11 @@ networks:
 services:
   caddy:
     build: .
+    # kics-scan ignore-block
+    cap_add:
+      - NET_BIND_SERVICE
     cap_drop:
       - ALL
-    cap_add:
-      # kics-scan ignore-line
-      - NET_BIND_SERVICE
     configs:
       - source: caddyfile
         target: /etc/caddy/Caddyfile
