--- a/svc/immich/docker-compose.yml
+++ b/svc/immich/docker-compose.yml
@@ -1,16 +1,29 @@
+# kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
+
 # Create a .env file with:
 #
-# POSTGRES_PASSWORD=password
-# POSTGRES_USER=user
-# POSTGRES_DB=db
+# POSTGRES_PASSWORD=
+# POSTGRES_USER=
+# POSTGRES_DB=
 
 name: immich
 
+networks:
+  caddy:
+    external: true
+  default: {}
+
 services:
   immich-machine-learning:
+    cap_drop:
+      - ALL
     image: ghcr.io/immich-app/immich-machine-learning:v1.117.0@sha256:1221bc54568a0779227baeaa4282bb0e0db50831b66f9ac9afa9d78513df36ad
+    networks:
+      - default
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges:true
     tmpfs:
       - /.cache:uid=8723,gid=8723
       - /tmp:uid=8723,gid=8723
@@ -31,9 +44,17 @@ services:
       - DB_PASSWORD=${POSTGRES_PASSWORD}
       - DB_USERNAME=${POSTGRES_USER}
     image: ghcr.io/immich-app/immich-server:v1.117.0@sha256:ac9fb82f2be3cc60d4e0c7f1ceb371d401d52573e387834d7a82776116458242
+    networks:
+      caddy:
+        aliases:
+          - immich
+      default: {}
     ports:
-      - 3001:3001
+      # Used for connecting the app, since there is already tailscale encryption.
+      - 100.106.32.89:3001:3001
     restart: always
+    security_opt:
+      - no-new-privileges:true
     user: 5551:5551
     volumes:
       - data:/usr/src/app/upload
@@ -42,8 +63,12 @@ services:
       - ALL
     env_file: .env
     image: docker.io/tensorchord/pgvecto-rs:pg16-v0.3.0-rootless@sha256:d125f3aec02bfa66764432eae76e1098a3b0c6f8bf13db38f5af1156499c90b5
+    networks:
+      - default
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges:true
     tmpfs:
       - /tmp:uid=19166,gid=19166
       - /var/run/postgresql:uid=19166,gid=19166
@@ -54,8 +79,12 @@ services:
     cap_drop:
       - ALL
     image: docker.io/library/redis:7.4.1-alpine@sha256:de13e74e14b98eb96bdf886791ae47686c3c5d29f9d5f85ea55206843e3fce26
+    networks:
+      - default
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges:true
     tmpfs:
       - /data:uid=9243,gid=9243
     user: 9243:9243
