--- a/svc/adguard/docker-compose.yml
+++ b/svc/adguard/docker-compose.yml
@@ -1,14 +1,32 @@
+# kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
+
 name: adguard
+
+networks:
+  caddy:
+    external: true
 
 services:
   adguard:
+    # kics-scan ignore-block
+    cap_add:
+      - NET_BIND_SERVICE
+    cap_drop:
+      - ALL
     image: docker.io/adguard/adguardhome:v0.107.53@sha256:d9c512051141e6a617d773f16cdf6782c178464c6e766acf9fe63482a171f95c
+    networks:
+      caddy:
+        aliases:
+          - adguard
+    # kics-scan ignore-block
     ports:
-      - 3000:3000
-      - 53:53/tcp
-      - 53:53/udp
+      - 100.106.32.89:53:5353/tcp
+      - 100.106.32.89:53:5353/udp
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges:true
+    user: 58442:58442
     volumes:
       - config:/opt/adguardhome/conf
       - data:/opt/adguardhome/work
