--- a/svc/caddy/docker-compose.yml
+++ b/svc/caddy/docker-compose.yml
@@ -1,29 +1,42 @@
+# kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
+
 # Create .env file with:
 #
-# CF_API_TOKEN=token
+# CF_API_TOKEN=
 
 configs:
   caddyfile:
     file: configs/${HOSTNAME}.Caddyfile
 
+networks:
+  caddy:
+    name: caddy
+
 services:
   caddy:
     build: .
+    # kics-scan ignore-block
     cap_add:
-      - NET_ADMIN
+      - NET_BIND_SERVICE
+    cap_drop:
+      - ALL
     configs:
       - source: caddyfile
         target: /etc/caddy/Caddyfile
     env_file: .env
-    extra_hosts:
-      hosts.docker.internal: host-gateway
+    networks:
+      - caddy
+    # kics-scan ignore-block
     ports:
       - 443:443/tcp
       - 443:443/udp
     read_only: true
     restart: always
+    security_opt:
+      - no-new-privileges:true
     tmpfs:
-      - /config
+      - /config?uid=41380,gid=41380
+    user: 41380:41380
     volumes:
       - data:/data
 
