--- a/svc/woodpecker-agent/docker-compose.yml
+++ b/svc/woodpecker-agent/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     group_add:
       - "993"
     image: docker.io/woodpeckerci/woodpecker-agent:v2.7.1@sha256:1b021b729048a683984f11bb55c05ce3c81475f19be1040f0fd4d46f7fbe2b12
+    # kics-scan ignore-line
+    network_mode: host
     read_only: true
     restart: always
     security_opt:
