--- a/svc/woodpecker-agent/docker-compose.yml
+++ b/svc/woodpecker-agent/docker-compose.yml
@@ -1,5 +1,3 @@
-# kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
-
 # Create a .env file with:
 #
 # WOODPECKER_AGENT_SECRET=
@@ -15,6 +13,14 @@ services:
       WOODPECKER_SERVER: x555sj.gentoo-sargas.ts.net:9000
     group_add:
       - "993"
+    healthcheck:
+      interval: 10s
+      retries: 5
+      test:
+        - CMD
+        - woodpecker-agent
+        - ping
+      timeout: 5s
     image: docker.io/woodpeckerci/woodpecker-agent:v2.7.1@sha256:1b021b729048a683984f11bb55c05ce3c81475f19be1040f0fd4d46f7fbe2b12
     # kics-scan ignore-line
     network_mode: host
