--- a/svc/immich/docker-compose.yml
+++ b/svc/immich/docker-compose.yml
@@ -62,6 +62,13 @@ services:
     cap_drop:
       - ALL
     env_file: .env
+    healthcheck:
+      interval: 10s
+      retries: 5
+      test:
+        - CMD
+        - pg_isready
+      timeout: 5s
     image: docker.io/tensorchord/pgvecto-rs:pg16-v0.3.0-rootless@sha256:d125f3aec02bfa66764432eae76e1098a3b0c6f8bf13db38f5af1156499c90b5
     networks:
       - default
@@ -78,6 +85,14 @@ services:
   redis:
     cap_drop:
       - ALL
+    healthcheck:
+      interval: 10s
+      retries: 5
+      test:
+        - CMD
+        - redis-cli
+        - ping
+      timeout: 5s
     image: docker.io/library/redis:7.4.1-alpine@sha256:de13e74e14b98eb96bdf886791ae47686c3c5d29f9d5f85ea55206843e3fce26
     networks:
       - default
