--- a/svc/immich/docker-compose.yml
+++ b/svc/immich/docker-compose.yml
@@ -34,8 +34,10 @@ services:
     cap_drop:
       - ALL
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     env_file: .env
     environment:
       - DB_HOSTNAME=postgres
