--- a/svc/vaultwarden/docker-compose.yml
+++ b/svc/vaultwarden/docker-compose.yml
@@ -8,10 +8,8 @@
 # SMTP_PASSWORD=
 # SMTP_USERNAME=
 
-name: vaultwarden
-
 networks:
-  caddy:
+  caddy_default:
     external: true
 
 services:
@@ -36,7 +34,7 @@ services:
       TRASH_AUTO_DELETE_DAYS: 60
     image: quay.io/vaultwarden/server:1.32.2-alpine@sha256:7d69bfbf51b74a93e951f9949e7ce772e22ef0161afca8f1403d7144b2bc868d
     networks:
-      caddy:
+      caddy_default:
         aliases:
           - vaultwarden
     read_only: true
