--- a/svc/woodpecker-server/docker-compose.yml
+++ b/svc/woodpecker-server/docker-compose.yml
@@ -7,7 +7,7 @@
 name: woodpecker-server
 
 networks:
-  cloudflared:
+  cloudflared_default:
     external: true
 
 services:
@@ -29,7 +29,7 @@ services:
       timeout: 5s
     image: docker.io/woodpeckerci/woodpecker-server:v2.7.1@sha256:5fbc4e0fd3b56e20b999638d25f3b8826ba17998457da5747f56cb85f5c5bba8
     networks:
-      cloudflared:
+      cloudflared_default:
         aliases:
           - woodpecker
     ports:
