--- a/svc/minio/docker-compose.yml
+++ b/svc/minio/docker-compose.yml
@@ -5,10 +5,8 @@
 # MINIO_ROOT_USER=
 # MINIO_ROOT_PASSWORD=
 
-name: minio
-
 networks:
-  caddy:
+  caddy_default:
     external: true
 
 services:
@@ -25,7 +23,7 @@ services:
       - MINIO_BROWSER_REDIRECT_URL=https://minio.zarantonello.dev/minio/
     image: quay.io/minio/minio:RELEASE.2024-10-02T17-50-41Z-cpuv1@sha256:49599b999e2415e854b7038c0d691be02011389c13340399077871c89cd75763
     networks:
-      caddy:
+      caddy_default:
         aliases:
           - minio
     read_only: true
