--- a/svc/nextcloud/docker-compose.yml
+++ b/svc/nextcloud/docker-compose.yml
@@ -6,29 +6,19 @@
 # POSTGRES_USER=
 # POSTGRES_DB=
 
+# After the `data` volume has been created, it is necessary to run 
+# `chown -R 82:82 /var/lib/docker/volumes/nextcloud_data/_data`
+# on the host machine.
+
+# Refer to `../caddy/configs/x555sj.Caddyfile` for the php-fpm config.
+
 networks:
   caddy_default:
     external: true
   default: {}
 
 services:
-  immich-machine-learning:
-    cap_drop:
-      - ALL
-    image: ghcr.io/immich-app/immich-machine-learning:v1.118.2@sha256:4d89a309fd08a93649f1ae4a7572ae98f09d66b4c1dfb7916b71d31dec7eda38
-    networks:
-      - default
-    read_only: true
-    restart: always
-    security_opt:
-      - no-new-privileges:true
-    tmpfs:
-      - /.cache:uid=8723,gid=8723
-      - /tmp:uid=8723,gid=8723
-    user: 8723:8723
-    volumes:
-      - machine-learning-cache:/cache
-  immich-server:
+  nextcloud:
     cap_drop:
       - ALL
     depends_on:
@@ -38,26 +28,20 @@ services:
         condition: service_healthy
     env_file: .env
     environment:
-      - DB_HOSTNAME=postgres
-      - REDIS_HOSTNAME=redis
-      - DB_DATABASE_NAME=${POSTGRES_DB}
-      - DB_PASSWORD=${POSTGRES_PASSWORD}
-      - DB_USERNAME=${POSTGRES_USER}
-    image: ghcr.io/immich-app/immich-server:v1.118.2@sha256:f158810c90f80162f9b08729bbaec963731f12662960be38ff93093b78a0bbdf
+      - POSTGRES_HOST=postgres
+    image: docker.io/library/nextcloud:28.0.11-fpm-alpine
     networks:
       caddy_default:
         aliases:
-          - immich
+          - nextcloud
       default: {}
-    ports:
-      # Used for connecting the app, since there is already tailscale encryption.
-      - 100.106.32.89:2283:2283
     restart: always
     security_opt:
       - no-new-privileges:true
-    user: 5551:5551
+    user: 82:82
     volumes:
-      - data:/usr/src/app/upload
+      - data:/var/www/html/data
+      - nextcloud:/var/www/html
   postgres:
     cap_drop:
       - ALL
@@ -68,9 +52,8 @@ services:
       test:
         - CMD
         - pg_isready
-        - --username=${POSTGRES_USER}
       timeout: 5s
-    image: docker.io/tensorchord/pgvecto-rs:pg16-v0.3.0-rootless@sha256:d125f3aec02bfa66764432eae76e1098a3b0c6f8bf13db38f5af1156499c90b5
+    image: docker.io/library/postgres:17.0-alpine
     networks:
       - default
     read_only: true
@@ -78,9 +61,9 @@ services:
     security_opt:
       - no-new-privileges:true
     tmpfs:
-      - /tmp:uid=19166,gid=19166
-      - /var/run/postgresql:uid=19166,gid=19166
-    user: 19166:19166
+      - /tmp:uid=70,gid=70
+      - /var/run/postgresql:uid=70,gid=70
+    user: 70:70
     volumes:
       - postgres:/var/lib/postgresql/data
   redis:
@@ -107,5 +90,5 @@ services:
 
 volumes:
   data: {}
-  machine-learning-cache: {}
+  nextcloud: {}
   postgres: {}
