fix(nextcloud): add redis host

--- a/svc/nextcloud/docker-compose.yml
+++ b/svc/nextcloud/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     env_file: .env
     environment:
       POSTGRES_HOST: postgres:5432
+      REDIS_HOST: redis:6379
     image: docker.io/library/nextcloud:30.0.1-fpm-alpine@sha256:b6d31dfc4c47008b70ae6ca7235a3dc90e5343e69c1d61dff7f27b842e8e3876
     networks:
       caddy_default:
