--- a/svc/woodpecker-server/docker-compose.yml
+++ b/svc/woodpecker-server/docker-compose.yml
@@ -1,8 +1,10 @@
+# SETUP:
+#
 # Create a .env file with:
 #
-# WOODPECKER_AGENT_SECRET=
-# WOODPECKER_GITHUB_CLIENT=
-# WOODPECKER_GITHUB_SECRET=
+# - WOODPECKER_AGENT_SECRET
+# - WOODPECKER_GITHUB_CLIENT
+# - WOODPECKER_GITHUB_SECRET
 
 name: woodpecker-server
 
