--- a/svc/caddy/docker-compose.yml
+++ b/svc/caddy/docker-compose.yml
@@ -1,8 +1,10 @@
 # kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
 
+# SETUP:
+#
 # Create .env file with:
 #
-# CF_API_TOKEN=
+# - CF_API_TOKEN
 
 configs:
   caddyfile:
