--- a/svc/cloudflared/docker-compose.yml
+++ b/svc/cloudflared/docker-compose.yml
@@ -1,8 +1,10 @@
 # kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
 
+# SETUP:
+#
 # Create a .env file with:
 #
-# TUNNEL_TOKEN=
+# - TUNNEL_TOKEN
 
 networks:
   default: {}
