--- a/svc/minio/docker-compose.yml
+++ b/svc/minio/docker-compose.yml
@@ -1,9 +1,11 @@
 # kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
 
+# SETUP:
+#
 # Create a .env file with
 #
-# MINIO_ROOT_USER=
-# MINIO_ROOT_PASSWORD=
+# - MINIO_ROOT_USER
+# - MINIO_ROOT_PASSWORD
 
 networks:
   caddy_default:
