--- a/svc/nextcloud/docker-compose.yml
+++ b/svc/nextcloud/docker-compose.yml
@@ -1,13 +1,19 @@
 # kics-scan disable=698ed579-b239-4f8f-a388-baa4bcb13ef8
 
+# SETUP:
+#
 # Create a .env file with:
 #
 # POSTGRES_DB=
 # POSTGRES_PASSWORD=
 # POSTGRES_USER=
-
-# After the `data` volume has been created, it is necessary to run
-# `chown -R 82:82 /var/lib/docker/volumes/nextcloud_data/_data` on the host.
+#
+# Only the first time, run `docker compose create` to create volumes but don't
+# start containers. Then run `chown -R 82:82 /var/lib/docker/volumes/nextcloud_data/ _data`
+# and after that `docker compose up -d`.
+#
+# Additional configuration can be done by running
+# `docker compose exec -it nextcloud vi /var/www/html/config/config.php`.
 
 # Refer to `../caddy/configs/x555sj.Caddyfile` for the php-fpm config.
 
@@ -27,8 +33,8 @@ services:
         condition: service_healthy
     env_file: .env
     environment:
-      POSTGRES_HOST: postgres:5432
-      REDIS_HOST: redis:6379
+      POSTGRES_HOST: postgres
+      REDIS_HOST: redis
     image: docker.io/library/nextcloud:30.0.1-fpm-alpine@sha256:b6d31dfc4c47008b70ae6ca7235a3dc90e5343e69c1d61dff7f27b842e8e3876
     networks:
       caddy_default:
