docs: add documentation for setup (#58)

--- a/svc/nextcloud/docker-compose.yml
+++ b/svc/nextcloud/docker-compose.yml
@@ -4,9 +4,9 @@
 #
 # Create a .env file with:
 #
-# POSTGRES_DB=
-# POSTGRES_PASSWORD=
-# POSTGRES_USER=
+# - POSTGRES_DB
+# - POSTGRES_PASSWORD
+# - POSTGRES_USER
 #
 # Only the first time, run `docker compose create` to create volumes but don't
 # start containers. Then run `chown -R 82:82 /var/lib/docker/volumes/nextcloud_data/ _data`
