fix(caddy): cloudflared network

--- a/svc/caddy/docker-compose.yml
+++ b/svc/caddy/docker-compose.yml
@@ -11,7 +11,8 @@ configs:
     file: configs/${HOSTNAME}.Caddyfile
 
 networks:
-  cloudflared_default: {}
+  cloudflared_default:
+    external: true
   default: {}
 
 services:
