--- a/svc/nextcloud/docker-compose.yml
+++ b/svc/nextcloud/docker-compose.yml
@@ -65,7 +65,6 @@ services:
       - redis:/volumes/redis
 
   nextcloud_server:
-    build: .
     cap_drop:
       - ALL
     depends_on:
@@ -75,8 +74,6 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    devices:
-      - /dev/dri
     env_file: .env
     environment:
       NEXTCLOUD_TRUSTED_DOMAINS: cloud.zarantonello.dev
@@ -85,20 +82,20 @@ services:
       OVERWRITECLIURL: http://caddy:3000
       POSTGRES_HOST: postgres
       REDIS_HOST: redis
+    image: docker.io/library/nextcloud:30.0.1-fpm-alpine@sha256:b6d31dfc4c47008b70ae6ca7235a3dc90e5343e69c1d61dff7f27b842e8e3876
     networks:
       - default
     restart: always
     security_opt:
       - no-new-privileges:true
     tmpfs:
-      - /tmp:uid=82,gid=82,exec
+      - /tmp:uid=82,gid=82
     user: 82:82
     volumes:
       - data:/var/www/html/data
       - nextcloud:/var/www/html
 
   nextcloud_cron:
-    build: .
     cap_drop:
       - ALL
     depends_on:
@@ -108,6 +105,7 @@ services:
       - sh
       - -c
       - while true ; do php -f /var/www/html/cron.php && sleep 300 ; done
+    image: docker.io/library/nextcloud:30.0.1-fpm-alpine@sha256:b6d31dfc4c47008b70ae6ca7235a3dc90e5343e69c1d61dff7f27b842e8e3876
     networks:
       - default
     read_only: true
@@ -115,14 +113,13 @@ services:
     security_opt:
       - no-new-privileges:true
     tmpfs:
-      - /tmp:uid=82,gid=82,exec
+      - /tmp:uid=82,gid=82
     user: 82:82
     volumes:
       - data:/var/www/html/data
       - nextcloud:/var/www/html
 
   nextcloud_notify_push:
-    build: .
     cap_drop:
       - ALL
     depends_on:
@@ -131,6 +128,7 @@ services:
     entrypoint:
       - /var/www/html/custom_apps/notify_push/bin/x86_64/notify_push
       - /var/www/html/config/config.php
+    image: docker.io/library/nextcloud:30.0.1-fpm-alpine@sha256:b6d31dfc4c47008b70ae6ca7235a3dc90e5343e69c1d61dff7f27b842e8e3876
     networks:
       - default
     read_only: true
