--- a/svc/nextcloud/docker-compose.yml
+++ b/svc/nextcloud/docker-compose.yml
@@ -42,10 +42,10 @@ services:
     restart: always
     security_opt:
       - no-new-privileges:true
-    user: 52892:52892
     tmpfs:
       - /config:uid=52892,gid=52892
       - /data:uid=52892,gid=52892
+    user: 52892:52892
     volumes:
       - nextcloud:/var/www/html:ro
 
@@ -57,44 +57,13 @@ services:
       - chown -R 82:82 /volumes/data && chown -R 24056:24056 /volumes/redis
     image: docker.io/library/busybox:1.37.0-musl
     read_only: true
-    restart: no
+    restart: "no"
     security_opt:
       - no-new-privileges:true
     user: 0:0
     volumes:
       - data:/volumes/data
       - redis:/volumes/redis
-
-  nextcloud_server:
-    cap_drop:
-      - ALL
-    depends_on:
-      chown-volumes:
-        condition: service_completed_successfully
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    env_file: .env
-    environment:
-      NEXTCLOUD_TRUSTED_DOMAINS: cloud.zarantonello.dev
-      OVERWRITEHOST: cloud.zarantonello.dev
-      OVERWRITEPROTOCOL: https
-      OVERWRITECLIURL: http://caddy:3000
-      POSTGRES_HOST: postgres
-      REDIS_HOST: redis
-    image: docker.io/library/nextcloud:30.0.1-fpm-alpine@sha256:b6d31dfc4c47008b70ae6ca7235a3dc90e5343e69c1d61dff7f27b842e8e3876
-    networks:
-      - default
-    restart: always
-    security_opt:
-      - no-new-privileges:true
-    tmpfs:
-      - /tmp:uid=82,gid=82
-    user: 82:82
-    volumes:
-      - data:/var/www/html/data
-      - nextcloud:/var/www/html
 
   nextcloud_cron:
     cap_drop:
@@ -138,6 +107,37 @@ services:
       - no-new-privileges:true
     user: 82:82
     volumes:
+      - nextcloud:/var/www/html
+
+  nextcloud_server:
+    cap_drop:
+      - ALL
+    depends_on:
+      chown-volumes:
+        condition: service_completed_successfully
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    env_file: .env
+    environment:
+      NEXTCLOUD_TRUSTED_DOMAINS: cloud.zarantonello.dev
+      OVERWRITECLIURL: http://caddy:3000
+      OVERWRITEHOST: cloud.zarantonello.dev
+      OVERWRITEPROTOCOL: https
+      POSTGRES_HOST: postgres
+      REDIS_HOST: redis
+    image: docker.io/library/nextcloud:30.0.1-fpm-alpine@sha256:b6d31dfc4c47008b70ae6ca7235a3dc90e5343e69c1d61dff7f27b842e8e3876
+    networks:
+      - default
+    restart: always
+    security_opt:
+      - no-new-privileges:true
+    tmpfs:
+      - /tmp:uid=82,gid=82
+    user: 82:82
+    volumes:
+      - data:/var/www/html/data
       - nextcloud:/var/www/html
 
   postgres:
