--- a/.woodpecker/check-commitizen.yml
+++ b/.woodpecker/check-commitizen.yml
@@ -2,13 +2,13 @@
 
 steps:
   - commands:
-      - pip install --root-user-action=ignore --progress-bar=off "yamllint==$YAMLLINT_VERSION"
-      - yamllint .
+      - pip install --root-user-action=ignore --progress-bar=off "commitizen==$COMMITIZEN_VERSION"
+      - cz check --message "$CI_COMMIT_MESSAGE"
     environment:
-      # renovate: datasource=pypi depName=yamllint versioning=pep440
-      YAMLLINT_VERSION: 1.35.1
+      # renovate: datasource=pypi depName=commitizen versioning=pep440
+      COMMITIZEN_VERSION: 3.30.0
     image: docker.io/library/python:3.13.0-alpine@sha256:c38ead8bcf521573dad837d7ecfdebbc87792202e89953ba8b2b83a9c5a520b6
-    name: check-yamllint
+    name: check-commitizen
     volumes:
       - wp-cache_global_pip:/root/.cache/pip
 
