chore: fix lints

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,4 @@
+# kics-scan ignore=965a08d7-ef86-4f14-8792-4a3b2098937e
 FROM docker.io/oven/bun:1.1.33-slim@sha256:fac38fc9f43345a8dea1f354c3e8976f0a7610050049d12d72bab335ea4905e6
 
 # Configure shell.
@@ -19,7 +20,7 @@ RUN apt-get update && \
         git \
         gpg && \
     git config --global core.editor code && \
-    git config --global --add safe.directory /workspaces/unitn-ice-notes
+    git config --global --add safe.directory /workspaces/docker-compose-manifests
 
 HEALTHCHECK NONE
 # hadolint ignore=DL3002
